--- a/dev/web/src/sass/hidari-kikino-eren/_reset.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_reset.scss
@@ -14,19 +14,22 @@ time, mark, audio, video {
 	padding:0;
 	border:0;
 	outline:0;
-	font-size: 62.5%;
+  font-size: 100%;
+  font: inherit;
 	vertical-align:baseline;
 	background:transparent;
   box-sizing: border-box;
 }
 
 body {
-  color: rgb(38, 38, 38);
-  font-size: 1.4rem;
-  font-weight: 300;
-	font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", メイリオ, sans-serif;
-  letter-spacing: 0.1em;	
-	line-height: 1.7;
+  width: 100%;
+  height: 100%;
+  font-family: YakuHanJP,Noto Sans JP,sans-serif;
+  font-weight: 500;
+  line-height: 1;
+  background-color: #e50013;
+  -webkit-font-smoothing: antialiased; //フォント アンチエイリアス調整
+  text-rendering: optimizeLegibility; //レンダリング時のテキスト最適化方法
 }
 
 img {
