--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -1,22 +1,14 @@
 @charset "UTF-8";
-@media screen and (max-width: 768px) {
-  .mod-displayNone_mobileOnly {
+@media screen and (min-width: 800px) {
+  .mod-displayNone_smallDesktop {
     display: none !important; } }
 
-@media screen and (max-width: 1024px) {
-  .mod-displayNone_mobile {
+@media screen and (min-width: 800px) and (max-width: 1100px) {
+  .mod-displayNone_mediumDesktop {
     display: none !important; } }
 
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .mod-displayNone_tablet {
-    display: none !important; } }
-
-@media screen and (min-width: 769px) {
-  .mod-displayNone_desktopFollow {
-    display: none !important; } }
-
-@media screen and (min-width: 1025px) {
-  .mod-displayNone_desktop {
+@media screen and (min-width: 1600px) {
+  .mod-displayNone_wideDesktop {
     display: none !important; } }
 
 html, body, div, span, object, iframe,
@@ -35,19 +27,22 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   outline: 0;
-  font-size: 62.5%;
+  font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
   background: transparent;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 body {
-  color: #262626;
-  font-size: 1.4rem;
-  font-weight: 300;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", メイリオ, sans-serif;
-  letter-spacing: 0.1em;
-  line-height: 1.7; }
+  width: 100%;
+  height: 100%;
+  font-family: YakuHanJP,Noto Sans JP,sans-serif;
+  font-weight: 500;
+  line-height: 1;
+  background-color: #e50013;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility; }
 
 img {
   width: 100%; }
@@ -94,8 +89,136 @@ hr {
 input, select {
   vertical-align: middle; }
 
-body {
-  height: 300px;
-  width: 500px;
-  color: white;
-  background: black; }
+.btnSideMenu {
+  position: relative;
+  border: solid .26667vw #fff;
+  background-color: #000;
+  -webkit-transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden; }
+  @media screen and (min-width: 800px) {
+    .btnSideMenu {
+      border: solid .06944vw #fff; } }
+  .btnSideMenu:before, .btnSideMenu:after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 101%;
+    height: 51%;
+    background-color: #02d0d0;
+    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    z-index: 0; }
+    @media screen and (min-width: 800px) {
+      .btnSideMenu:before, .btnSideMenu:after {
+        width: 51%;
+        height: 102%;
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0); } }
+  .btnSideMenu:before {
+    top: 0;
+    left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left; }
+    @media screen and (min-width: 800px) {
+      .btnSideMenu:before {
+        -webkit-transform-origin: bottom center;
+        transform-origin: bottom center; } }
+  .btnSideMenu:after {
+    top: auto;
+    bottom: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right; }
+    @media screen and (min-width: 800px) {
+      .btnSideMenu:after {
+        right: 0;
+        left: auto;
+        -webkit-transform-origin: top center;
+        transform-origin: top center; } }
+  .btnSideMenu_inner {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    z-index: 2; }
+    .btnSideMenu_inner > span {
+      position: relative;
+      color: #fff;
+      font-size: 5.06667vw;
+      letter-spacing: .16em;
+      text-indent: .16em;
+      -webkit-transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      -webkit-transform: scaleX(0.85);
+      transform: scaleX(0.85);
+      z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .btnSideMenu_inner > span {
+          -webkit-writing-mode: vertical-rl;
+          -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+          text-align: center;
+          letter-spacing: .2em;
+          text-indent: .2em; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .btnSideMenu_inner > span {
+          font-size: 1.40541vw; } }
+      .btnSideMenu_inner > span:active {
+        color: #e50013;
+        -webkit-transition-duration: .1s;
+        transition-duration: .1s; }
+    .btnSideMenu_inner > svg {
+      position: absolute;
+      top: 0;
+      right: auto;
+      bottom: 0;
+      left: 3.2vw;
+      width: 5.33333vw;
+      height: 3.06667vw;
+      fill: #e50013;
+      margin: auto;
+      display: block;
+      z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .btnSideMenu_inner > svg {
+          left: .69444vw;
+          width: 1.38889vw;
+          height: .79861vw; } }
+  .btnSideMenu:active {
+    background-color: #02d0d0;
+    -webkit-transition-duration: .1s;
+    transition-duration: .1s; }
+  @media screen and (min-width: 800px) {
+    .btnSideMenu:hover:before, .btnSideMenu:hover:after {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1); } }
+
+/*
+以下のDOM構造で使用
+
+<div class="btnSideMenu">
+  <a class="btnSideMenu_inner" href="">
+    <span>トップ</span>
+    <svg>
+      <use xlink:href="#arrow">
+    </svg>
+  </a>
+</div>
+
+*/
