--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -35,6 +35,7 @@ time, mark, audio, video {
   box-sizing: border-box; }
 
 body {
+  position: relative;
   width: 100%;
   height: 100%;
   font-family: YakuHanJP,Noto Sans JP,sans-serif;
@@ -88,6 +89,116 @@ hr {
 
 input, select {
   vertical-align: middle; }
+
+.hidarikikinoEren .lp-loading {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #e50013;
+  z-index: 1000;
+  -webkit-transition: visibility .2s linear,opacity .2s linear;
+  transition: visibility .2s linear,opacity .2s linear; }
+  .hidarikikinoEren .lp-loading_wrap {
+    position: absolute;
+    top: 26.93333vw;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+    transform: translate(-50%);
+    width: 203.6vw;
+    height: 112.26667vw; }
+  .hidarikikinoEren .lp-loading_text {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    margin: 0 auto;
+    background: url("../../../data/hidari-kikino-eren/images/loading_txt.png") 50% no-repeat;
+    background-size: contain;
+    -webkit-transform: translateY(150%);
+    transform: translateY(150%);
+    width: 28.53333vw;
+    height: 2.66667vw; }
+
+.hidarikikinoEren .lp-loadingInner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
+  .hidarikikinoEren .lp-loadingInner_item {
+    display: block;
+    width: 203.6vw;
+    height: 100%;
+    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    .hidarikikinoEren .lp-loadingInner_item:before {
+      -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
+      transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
+      transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
+      transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.4s, -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1) 0.4s; }
+  .hidarikikinoEren .lp-loadingInner .mod-item1 {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1); }
+    .hidarikikinoEren .lp-loadingInner .mod-item1:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: #0e6cb2;
+      -webkit-transition-delay: 0s;
+      transition-delay: 0s;
+      -webkit-transform: scaleY(0.006);
+      transform: scaleY(0.006); }
+  .hidarikikinoEren .lp-loadingInner .mod-item1.add-load:before {
+    -webkit-transform: scaleY(1);
+    transform: scaleY(1); }
+  .hidarikikinoEren .lp-loadingInner .mod-item2 {
+    -webkit-box-ordinal-group: 4;
+    -ms-flex-order: 3;
+    order: 3; }
+    .hidarikikinoEren .lp-loadingInner .mod-item2:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: #fe3c00;
+      -webkit-transition-delay: .2s;
+      transition-delay: .2s;
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0); }
+  .hidarikikinoEren .lp-loadingInner .mod-item3 {
+    display: none; }
+  .hidarikikinoEren .lp-loadingInner .mod-item4 {
+    -webkit-box-ordinal-group: 2;
+    -ms-flex-order: 1;
+    order: 1; }
+    .hidarikikinoEren .lp-loadingInner .mod-item4:before {
+      content: "";
+      display: block;
+      width: 100%;
+      height: 100%;
+      background-color: #02d0d0;
+      -webkit-transition-delay: .2s;
+      transition-delay: .2s;
+      -webkit-transform: scaleY(0);
+      transform: scaleY(0); }
 
 .btnSideMenu {
   position: relative;
