--- a/dev/web/src/sass/hidari-kikino-eren/_reset.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_reset.scss
@@ -22,6 +22,7 @@ time, mark, audio, video {
 }
 
 body {
+  position: relative;
   width: 100%;
   height: 100%;
   font-family: YakuHanJP,Noto Sans JP,sans-serif;
