--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -32,6 +32,11 @@
       height: 2.66667vw;
     }
   }
+  .lp-loading.add-loaded {
+    opacity: 0;
+    visibility: hidden;
+    transition-delay: 1s;
+  }
 
   .lp-loadingInner {
     position: absolute;
@@ -48,9 +53,13 @@
       width: 203.6vw;
       height: 100%;
       transition: transform .4s cubic-bezier(.19,1,.22,1);
-
       &:before {
         transition: transform .8s cubic-bezier(.19,1,.22,1) .4s;
+      }
+    }
+    &_item.add-loaded {
+      &:before {
+        transform: scaleY(1) !important;
       }
     }
 
@@ -67,13 +76,6 @@
         transform: scaleY(.006);
       }
     }
-    .mod-item1.add-load {
-      // transform: scaleX(1);
-      &:before {
-        transform: scaleY(1)
-      }
-    }
-
 
     .mod-item2 {
       order: 3;
