--- a/dev/web/src/sass/hidari-kikino-eren/_reset.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_reset.scss
@@ -41,6 +41,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 300;
 }
 
+button {
+  outline: none;
+  padding: 0;
+  border: none;
+}
 
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section { 
