--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -322,4 +322,9 @@
 /* ------------------
 		lp-menu
 --------------------- */
+  .lp-main {
+    position: relative;
+    width: 100%;
+    padding-top: 12vw;
+  }
 }
