--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -106,7 +106,7 @@ input, select {
 		lp-menu
 --------------------- */
   /* ------------------
-		lp-menu
+		lp-main
 --------------------- */ }
   .hidarikikinoEren .lp-loading {
     position: fixed;
@@ -427,6 +427,89 @@ input, select {
     position: relative;
     width: 100%;
     padding-top: 12vw; }
+    .hidarikikinoEren .lp-main .lp-kv {
+      position: relative;
+      width: 100%;
+      max-width: 1600px;
+      padding-top: 14.933vw; }
+      .hidarikikinoEren .lp-main .lp-kv_characters {
+        position: relative;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+        width: 542.93333vw;
+        height: 112.26667vw;
+        margin: auto; }
+      .hidarikikinoEren .lp-main .lp-kv .lp-character {
+        position: relative;
+        height: 100%;
+        width: 67.86667vw; }
+        .hidarikikinoEren .lp-main .lp-kv .lp-character_inner {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: 50%;
+          -webkit-transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
+        .hidarikikinoEren .lp-main .lp-kv .lp-character_inner:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+          -webkit-transition: background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item1 .lp-character_inner {
+        background-image: url("../../../data/hidari-kikino-eren/images/kv_img1.jpg");
+        -webkit-transition-delay: .1s;
+        transition-delay: .1s; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item1 .lp-character_inner:after {
+        background-color: #0e6cb2;
+        -webkit-transform-origin: bottom center;
+        transform-origin: bottom center; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item2 .lp-character_inner {
+        background-image: url("../../../data/hidari-kikino-eren/images/kv_img2.jpg");
+        -webkit-transition-delay: .2s;
+        transition-delay: .2s; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item2 .lp-character_inner:after {
+        background-color: #fe3c00;
+        -webkit-transform-origin: top center;
+        transform-origin: top center; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item3 .lp-character_inner {
+        background-image: url("../../../data/hidari-kikino-eren/images/kv_img3.jpg");
+        -webkit-transition-delay: .3s;
+        transition-delay: .3s; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item3 .lp-character_inner:after {
+        background-color: #deff00;
+        -webkit-transform-origin: bottom center;
+        transform-origin: bottom center; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item4 .lp-character_inner {
+        background-image: url("../../../data/hidari-kikino-eren/images/kv_img4.jpg");
+        -webkit-transition-delay: 0s;
+        transition-delay: 0s; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-item4 .lp-character_inner:after {
+        background-color: #02d0d0;
+        -webkit-transform-origin: top center;
+        transform-origin: top center; }
 
 .btnSideMenu {
   position: relative;
