--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -320,11 +320,102 @@
   }
 
 /* ------------------
-		lp-menu
+		lp-main
 --------------------- */
   .lp-main {
     position: relative;
     width: 100%;
     padding-top: 12vw;
+
+    .lp-kv { //動きを見てプロパティ追加
+      position: relative;
+      width: 100%;
+      max-width: 1600px;
+      padding-top: 14.933vw;
+
+      &_characters {
+        position: relative;
+        display: flex;
+        flex-wrap: nowrap;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 542.93333vw;
+        height: 112.26667vw;
+        margin: auto;
+      }
+
+      .lp-character {
+        position: relative;
+        height: 100%;
+        width: 67.86667vw;
+        &_inner {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-repeat: no-repeat;
+          background-position: 50%;
+          transition: transform .8s cubic-bezier(.19,1,.22,1);
+        }
+        &_inner:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          transform: scaleY(0);
+          transition: transform .8s cubic-bezier(.19,1,.22,1),
+                      background-color .8s cubic-bezier(.19,1,.22,1);
+        }
+      }
+
+      .mod-item1 {
+        
+        .lp-character_inner {
+          background-image: url('../../../data/hidari-kikino-eren/images/kv_img1.jpg');
+          transition-delay: .1s;
+        }
+        .lp-character_inner:after {
+          background-color: #0e6cb2;
+          transform-origin: bottom center;
+        }
+      }
+      .mod-item2 {
+        
+        .lp-character_inner {
+          background-image: url('../../../data/hidari-kikino-eren/images/kv_img2.jpg');
+          transition-delay: .2s;
+        }
+        .lp-character_inner:after {
+          background-color: #fe3c00;
+          transform-origin: top center;
+        }
+      }
+      .mod-item3 {
+        
+        .lp-character_inner {
+          background-image: url('../../../data/hidari-kikino-eren/images/kv_img3.jpg');
+          transition-delay: .3s;
+        }
+        .lp-character_inner:after {
+          background-color: #deff00;
+          transform-origin: bottom center;
+        }
+      }
+      .mod-item4 {
+        
+        .lp-character_inner {
+          background-image: url('../../../data/hidari-kikino-eren/images/kv_img4.jpg');
+          transition-delay: 0s;
+        }
+        .lp-character_inner:after {
+          background-color: #02d0d0;
+          transform-origin: top center;
+        }
+      }
+    }
   }
 }
