--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -450,8 +450,7 @@ input, select {
         height: 112.26667vw;
         margin: auto;
         -webkit-backface-visibility: hidden;
-        backface-visibility: hidden;
-        will-change: transform; }
+        backface-visibility: hidden; }
       .hidarikikinoEren .lp-main .lp-kv .lp-character {
         position: relative;
         height: 100%;
@@ -476,12 +475,15 @@ input, select {
           top: 0;
           width: 100%;
           height: 100%;
-          -webkit-transform: scaleY(0);
-          transform: scaleY(0);
+          -webkit-transform: scaleY(1);
+          transform: scaleY(1);
           -webkit-transition: background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
           transition: background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
           transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1);
           transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1), background-color 0.8s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.8s cubic-bezier(0.19, 1, 0.22, 1); }
+      .hidarikikinoEren .lp-main .lp-kv .lp-character_inner.add-loaded:after {
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0); }
       .hidarikikinoEren .lp-main .lp-kv .mod-item1 .lp-character_inner {
         background-image: url("../../../data/hidari-kikino-eren/images/kv_img1.jpg");
         -webkit-transition-delay: .1s;
@@ -514,6 +516,40 @@ input, select {
         background-color: #02d0d0;
         -webkit-transform-origin: top center;
         transform-origin: top center; }
+      .hidarikikinoEren .lp-main .lp-kv > h1 {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: start;
+        -ms-flex-align: start;
+        align-items: flex-start;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column; }
+      .hidarikikinoEren .lp-main .lp-kv_title {
+        background-color: #000;
+        font-size: 6.933vw;
+        padding: .6em;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center; }
+      .hidarikikinoEren .lp-main .lp-kv_name {
+        position: absolute;
+        width: 70vw;
+        height: 15.333vw;
+        top: 2.6667vw;
+        left: 2.6667vw; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-title1 img {
+        width: 5.73333vw; }
+      .hidarikikinoEren .lp-main .lp-kv .mod-title2 img {
+        height: 5.6vw; }
 
 .btnSideMenu {
   position: relative;
