--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -345,7 +345,7 @@
         margin: auto;
         backface-visibility: hidden;
         // transition: transform 2.5s linear;
-        will-change: transform;
+        // will-change: transform;
         // animation: loop 50s linear infinite;
         // @keyframes loop {
         //   0% {
@@ -385,10 +385,14 @@
           top: 0;
           width: 100%;
           height: 100%;
-          transform: scaleY(0);
+          transform: scaleY(1);
           transition: transform .8s cubic-bezier(.19,1,.22,1),
                       background-color .8s cubic-bezier(.19,1,.22,1);
         }
+      }
+
+      .lp-character_inner.add-loaded:after {
+        transform: scaleY(0);
       }
 
       .mod-item1 {
@@ -434,6 +438,37 @@
           background-color: #02d0d0;
           transform-origin: top center;
         }
+      }
+
+      > h1 {
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+      }
+
+      &_title {
+        background-color: #000;
+        font-size: 6.933vw;
+        padding: .6em;
+        display: flex;
+        align-items: center;
+      }
+
+      &_name {
+        position: absolute;
+        width: 70vw;
+        height: 15.333vw;
+        top: 2.6667vw;
+        left: 2.6667vw;
+      }
+      .mod-title1 img {
+        width: 5.73333vw;
+      }
+      .mod-title2 img {
+        height: 5.6vw;
       }
     }
   }
