--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -142,8 +142,9 @@
       }
     }
   }
+
 /* ------------------
-		lp-menu
+		lp-menuBtn
 --------------------- */
   .lp-menuBtn {
     position: fixed;
@@ -239,6 +240,9 @@
     }
   }
 
+/* ------------------
+		lp-menu
+--------------------- */
   .lp-menu {
     position: fixed;
     top: 0;
@@ -322,153 +326,244 @@
 /* ------------------
 		lp-main
 --------------------- */
-  .lp-main {
+  main {
     position: relative;
     width: 100%;
     padding-top: 12vw;
+  }
 
-    .lp-kv { //動きを見てプロパティ追加
+/* ------------------
+		lp-kv
+--------------------- */
+  .lp-kv { //動きを見てプロパティ追加
+    position: relative;
+    width: 100%;
+    max-width: 1600px;
+    padding-top: 14.933vw;
+    overflow: hidden;
+
+    &_characters {
       position: relative;
-      width: 100%;
-      max-width: 1600px;
-      padding-top: 14.933vw;
-      overflow: hidden;
+      display: flex;
+      flex-wrap: nowrap;
+      justify-content: flex-start;
+      align-items: flex-start;
+      width: 542.93333vw;
+      height: 112.26667vw;
+      margin: auto;
+      backface-visibility: hidden;
+      // transition: transform 2.5s linear;
+      // will-change: transform;
+      // animation: loop 50s linear infinite;
+      // @keyframes loop {
+      //   0% {
+      //     transform: translateX(0%);
+      //   }
+      //   33% {
+      //     transform: translateX(-33%);
+      //   }
+      //   66% {
+      //     transform: translateX(-66%);
+      //   }
+      //   100% {
+      //     transform: translateX(-100%);
+      //   }
+      // }
+    }
 
-      &_characters {
-        position: relative;
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        align-items: flex-start;
-        width: 542.93333vw;
-        height: 112.26667vw;
-        margin: auto;
-        backface-visibility: hidden;
-        // transition: transform 2.5s linear;
-        // will-change: transform;
-        // animation: loop 50s linear infinite;
-        // @keyframes loop {
-        //   0% {
-        //     transform: translateX(0%);
-        //   }
-        //   33% {
-        //     transform: translateX(-33%);
-        //   }
-        //   66% {
-        //     transform: translateX(-66%);
-        //   }
-        //   100% {
-        //     transform: translateX(-100%);
-        //   }
-        // }
-      }
-
-      .lp-character {
-        position: relative;
-        height: 100%;
-        width: 67.86667vw;
-        &_inner {
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-position: 50%;
-          transition: transform .8s cubic-bezier(.19,1,.22,1);
-        }
-        &_inner:after {
-          content: "";
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 100%;
-          height: 100%;
-          transform: scaleY(1);
-          transition: transform .8s cubic-bezier(.19,1,.22,1),
-                      background-color .8s cubic-bezier(.19,1,.22,1);
-        }
-      }
-
-      .lp-character_inner.add-loaded:after {
-        transform: scaleY(0);
-      }
-
-      .mod-item1 {
-        
-        .lp-character_inner {
-          background-image: url('../../../data/hidari-kikino-eren/images/kv_img1.jpg');
-          transition-delay: .1s;
-        }
-        .lp-character_inner:after {
-          background-color: #0e6cb2;
-          transform-origin: bottom center;
-        }
-      }
-      .mod-item2 {
-        
-        .lp-character_inner {
-          background-image: url('../../../data/hidari-kikino-eren/images/kv_img2.jpg');
-          transition-delay: .2s;
-        }
-        .lp-character_inner:after {
-          background-color: #fe3c00;
-          transform-origin: top center;
-        }
-      }
-      .mod-item3 {
-        
-        .lp-character_inner {
-          background-image: url('../../../data/hidari-kikino-eren/images/kv_img3.jpg');
-          transition-delay: .3s;
-        }
-        .lp-character_inner:after {
-          background-color: #deff00;
-          transform-origin: bottom center;
-        }
-      }
-      .mod-item4 {
-        
-        .lp-character_inner {
-          background-image: url('../../../data/hidari-kikino-eren/images/kv_img4.jpg');
-          transition-delay: 0s;
-        }
-        .lp-character_inner:after {
-          background-color: #02d0d0;
-          transform-origin: top center;
-        }
-      }
-
-      > h1 {
+    .lp-character {
+      position: relative;
+      height: 100%;
+      width: 67.86667vw;
+      &_inner {
         position: absolute;
         left: 0;
-        bottom: 0;
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50%;
+        transition: transform .8s cubic-bezier(.19,1,.22,1);
       }
-
-      &_title {
-        background-color: #000;
-        font-size: 6.933vw;
-        padding: .6em;
-        display: flex;
-        align-items: center;
-      }
-
-      &_name {
+      &_inner:after {
+        content: "";
         position: absolute;
-        width: 70vw;
-        height: 15.333vw;
-        top: 2.6667vw;
-        left: 2.6667vw;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        transform: scaleY(1);
+        transition: transform .8s cubic-bezier(.19,1,.22,1),
+                    background-color .8s cubic-bezier(.19,1,.22,1);
       }
-      .mod-title1 img {
-        width: 5.73333vw;
+    }
+
+    .lp-character_inner.add-loaded:after {
+      transform: scaleY(0);
+    }
+
+    .mod-item1 {
+      
+      .lp-character_inner {
+        background-image: url('../../../data/hidari-kikino-eren/images/kv_img1.jpg');
+        transition-delay: .1s;
       }
-      .mod-title2 img {
-        height: 5.6vw;
+      .lp-character_inner:after {
+        background-color: #0e6cb2;
+        transform-origin: bottom center;
+      }
+    }
+    .mod-item2 {
+      
+      .lp-character_inner {
+        background-image: url('../../../data/hidari-kikino-eren/images/kv_img2.jpg');
+        transition-delay: .2s;
+      }
+      .lp-character_inner:after {
+        background-color: #fe3c00;
+        transform-origin: top center;
+      }
+    }
+    .mod-item3 {
+      
+      .lp-character_inner {
+        background-image: url('../../../data/hidari-kikino-eren/images/kv_img3.jpg');
+        transition-delay: .3s;
+      }
+      .lp-character_inner:after {
+        background-color: #deff00;
+        transform-origin: bottom center;
+      }
+    }
+    .mod-item4 {
+      
+      .lp-character_inner {
+        background-image: url('../../../data/hidari-kikino-eren/images/kv_img4.jpg');
+        transition-delay: 0s;
+      }
+      .lp-character_inner:after {
+        background-color: #02d0d0;
+        transform-origin: top center;
+      }
+    }
+
+    > h1 {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      align-items: flex-start;
+      flex-direction: column;
+    }
+
+    &_title {
+      background-color: #000;
+      font-size: 6.933vw;
+      padding: .6em;
+      display: flex;
+      align-items: center;
+    }
+
+    &_name {
+      position: absolute;
+      width: 70vw;
+      height: 15.333vw;
+      top: 2.6667vw;
+      left: 2.6667vw;
+    }
+    .mod-title1 img {
+      width: 5.73333vw;
+    }
+    .mod-title2 img {
+      height: 5.6vw;
+    }
+  }
+
+/* ------------------
+		lp-headContents
+--------------------- */
+  .lp-summery {
+    position: relative;
+    width: 100%;
+    max-width: 1600px;
+    margin: 14.6667vw auto auto;
+
+    &_heading {
+      position: relative;
+      background-color: #deff00;
+      background-image: url('../../../data/hidari-kikino-eren/images/summary_heading_bg.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      width: 100%;
+      height: 100vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      overflow: hidden;
+    }
+
+    &_headingInner {
+      position: relative;
+      z-index: 1;
+      left: 4vw;
+
+      > h2 {
+        position: absolute;
+        top: -3.33333vw;
+        left: 4vw;
+        width: 9.73333vw;
+        background-color: #000;
+        padding: 3.2vw 2.66667vw;
+        z-index: 2;
+
+        img {
+          display: block;
+          width: 3.86667vw;
+        }
+      }
+    }
+
+    &_headingDesc {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    &_descLine {
+      position: relative;
+      display: inline-block;
+      font-size: 2.93333vw;
+      font-weight: bold;
+      line-height: 1.8;
+      letter-spacing: .06em;
+      white-space: nowrap;
+      margin-top: -.04em;
+      padding: .4em .4em .4em 7.6em;
+      background-color: #deff00;
+      transform-origin: top left;
+      transform: scaleX(.9);
+
+      &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #deff00;
+        // width: 100%;
+        // height: 100%;
+      }
+    }
+
+    &_relationship {
+      
+      &:before {
+        content: "";
+        display: block;
+        width: 100%;
+        padding-top: 100%;
       }
     }
   }
