--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -558,12 +558,22 @@
     }
 
     &_relationship {
+      position: relative;
+      width: 100%;
       
       &:before {
         content: "";
         display: block;
         width: 100%;
         padding-top: 100%;
+      }
+
+      figure {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
       }
     }
   }
