--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -115,7 +115,10 @@ input, select {
 		lp-kv
 --------------------- */
   /* ------------------
-		lp-headContents
+		lp-summery
+--------------------- */
+  /* ------------------
+		lp-story
 --------------------- */ }
   .hidarikikinoEren .lp-loading {
     position: fixed;
@@ -650,8 +653,70 @@ input, select {
         left: 0;
         width: 100%;
         height: 100%; }
+  .hidarikikinoEren .lp-story {
+    position: relative;
+    width: 100%;
+    margin-top: 13.33333vw;
+    padding-top: 5.33333vw; }
+    .hidarikikinoEren .lp-story_inner {
+      background-image: url("../../../data/hidari-kikino-eren/images/story_pattern.jpg");
+      background-repeat: repeat;
+      background-position: 50%;
+      background-size: 360px 365px; }
+    .hidarikikinoEren .lp-story_tabs {
+      position: relative;
+      height: 19.45946vw; }
+      .hidarikikinoEren .lp-story_tabs:before {
+        content: "";
+        position: absolute;
+        background-color: #e50013;
+        border-color: #deff00;
+        border-width: .8vw;
+        height: 100%;
+        width: 4.26667vw; }
+    .hidarikikinoEren .lp-story_tab {
+      position: absolute;
+      top: 0;
+      display: block;
+      width: 45.33333vw;
+      height: 100%;
+      background-color: #000;
+      padding: 1.2vw 1.2vw 0;
+      z-index: 2; }
+      .hidarikikinoEren .lp-story_tab:nth-child(1) {
+        left: 4vw; }
+      .hidarikikinoEren .lp-story_tab:nth-child(2) {
+        right: 4vw; }
+    .hidarikikinoEren .lp-story .btn {
+      border: none; }
+      .hidarikikinoEren .lp-story .btn_inner svg {
+        left: 1.46667vw;
+        width: 3.6vw;
+        height: 2.13333vw; }
+    .hidarikikinoEren .lp-story_label {
+      color: #fff;
+      font-size: 4.26667vw;
+      font-weight: 500;
+      letter-spacing: .14em;
+      white-space: nowrap; }
+      .hidarikikinoEren .lp-story_label > span {
+        font-size: 58%;
+        line-height: 1.4;
+        letter-spacing: .14em;
+        margin-top: .8em; }
+    .hidarikikinoEren .lp-story_contents {
+      position: relative; }
+    .hidarikikinoEren .lp-story_pages {
+      margin: auto;
+      padding: 9.33333vw 4vw; }
+      .hidarikikinoEren .lp-story_pages > li:before {
+        display: block;
+        content: "";
+        width: 100%;
+        padding-top: 141.40625%;
+        background-color: #fff; }
 
-.btnSideMenu {
+.btn {
   position: relative;
   border: solid .26667vw #fff;
   background-color: #000;
@@ -663,9 +728,9 @@ input, select {
   backface-visibility: hidden;
   overflow: hidden; }
   @media screen and (min-width: 800px) {
-    .btnSideMenu {
+    .btn {
       border: solid .06944vw #fff; } }
-  .btnSideMenu:before, .btnSideMenu:after {
+  .btn:before, .btn:after {
     position: absolute;
     content: '';
     display: block;
@@ -682,35 +747,35 @@ input, select {
     backface-visibility: hidden;
     z-index: 0; }
     @media screen and (min-width: 800px) {
-      .btnSideMenu:before, .btnSideMenu:after {
+      .btn:before, .btn:after {
         width: 51%;
         height: 102%;
         -webkit-transform: scaleY(0);
         transform: scaleY(0); } }
-  .btnSideMenu:before {
+  .btn:before {
     top: 0;
     left: 0;
     -webkit-transform-origin: center left;
     transform-origin: center left; }
     @media screen and (min-width: 800px) {
-      .btnSideMenu:before {
+      .btn:before {
         -webkit-transform-origin: bottom center;
         transform-origin: bottom center; } }
-  .btnSideMenu:after {
+  .btn:after {
     top: auto;
     bottom: 0;
     -webkit-transform-origin: center right;
     transform-origin: center right; }
     @media screen and (min-width: 800px) {
-      .btnSideMenu:after {
+      .btn:after {
         right: 0;
         left: auto;
         -webkit-transform-origin: top center;
         transform-origin: top center; } }
-  .btnSideMenu:hover:before, .btnSideMenu:hover:after {
+  .btn:hover:before, .btn:hover:after {
     -webkit-transform: scaleX(1);
     transform: scaleX(1); }
-  .btnSideMenu_inner {
+  .btn_inner {
     position: relative;
     width: 100%;
     height: 100%;
@@ -724,7 +789,7 @@ input, select {
     -ms-flex-align: center;
     align-items: center;
     z-index: 2; }
-    .btnSideMenu_inner > span {
+    .btn_inner > span {
       position: relative;
       color: #fff;
       font-size: 5.06667vw;
@@ -736,7 +801,7 @@ input, select {
       transform: scaleX(0.85);
       z-index: 2; }
       @media screen and (min-width: 800px) {
-        .btnSideMenu_inner > span {
+        .btn_inner > span {
           -webkit-writing-mode: vertical-rl;
           -ms-writing-mode: tb-rl;
           writing-mode: vertical-rl;
@@ -744,9 +809,9 @@ input, select {
           letter-spacing: .2em;
           text-indent: .2em; } }
       @media screen and (min-width: 800px) and (max-width: 1100px) {
-        .btnSideMenu_inner > span {
+        .btn_inner > span {
           font-size: 1.40541vw; } }
-    .btnSideMenu_inner > svg {
+    .btn_inner > svg {
       position: absolute;
       top: 0;
       right: auto;
@@ -759,46 +824,46 @@ input, select {
       display: block;
       z-index: 2; }
       @media screen and (min-width: 800px) {
-        .btnSideMenu_inner > svg {
+        .btn_inner > svg {
           left: .69444vw;
           width: 1.38889vw;
           height: .79861vw; } }
-      .btnSideMenu_inner > svg:hover {
+      .btn_inner > svg:hover {
         fill: #e50013;
         -webkit-transition-duration: .1s;
         transition-duration: .1s; }
-  .btnSideMenu_inner:hover > span {
+  .btn_inner:hover > span {
     color: #e50013;
     -webkit-transition-duration: .1s;
     transition-duration: .1s; }
   @media screen and (min-width: 800px) {
-    .btnSideMenu:hover:before, .btnSideMenu:hover:after {
+    .btn:hover:before, .btn:hover:after {
       -webkit-transform: scaleY(1);
       transform: scaleY(1); } }
 
-.btnSideMenu.mod-vote {
+.btn.mod-vote {
   background-color: #02d0d0; }
-  .btnSideMenu.mod-vote span {
+  .btn.mod-vote span {
     color: #e50013; }
-  .btnSideMenu.mod-vote:before, .btnSideMenu.mod-vote:after {
+  .btn.mod-vote:before, .btn.mod-vote:after {
     background-color: #e50013; }
-  .btnSideMenu.mod-vote .btnSideMenu_inner:hover > span {
+  .btn.mod-vote .btn_inner:hover > span {
     color: #02d0d0; }
-  .btnSideMenu.mod-vote .btnSideMenu_inner:hover > svg {
+  .btn.mod-vote .btn_inner:hover > svg {
     fill: #02d0d0; }
 
-.btnSideMenu.mod-sns .btnSideMenu_inner:hover > svg {
+.btn.mod-sns .btn_inner:hover > svg {
   fill: #e50013; }
 
 /*
 以下のDOM構造で使用
 
-<div class="btnSideMenu">
-  <a class="btnSideMenu_inner" href="">
+<div class="btn">
+  <a class="btn_inner" href="">
     <span>トップ</span>
-      <svg>
-        <use xlink:href="#arrow">
-      </svg>
+    <svg>
+      <use xlink:href="#arrow">
+    </svg>
   </a>
 </div>
 
