--- a/dev/web/src/sass/hidari-kikino-eren/_button.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_button.scss
@@ -1,4 +1,4 @@
-.btnSideMenu {
+.btn {
   position: relative;
   border: solid .26667vw #fff;
   background-color: #000;
@@ -121,7 +121,7 @@
   }
 }
 
-.btnSideMenu.mod-vote {
+.btn.mod-vote {
   background-color: #02d0d0;
   span {
     color: #e50013;
@@ -129,7 +129,7 @@
   &:before, &:after {
     background-color: #e50013;
   }
-  .btnSideMenu_inner:hover {
+  .btn_inner:hover {
     > span {
       color: #02d0d0;
     }
@@ -139,8 +139,8 @@
   }
 }
 
-.btnSideMenu.mod-sns {
-  .btnSideMenu_inner:hover {
+.btn.mod-sns {
+  .btn_inner:hover {
     > svg {
       fill:  #e50013;
     }
@@ -150,12 +150,12 @@
 /*
 以下のDOM構造で使用
 
-<div class="btnSideMenu">
-  <a class="btnSideMenu_inner" href="">
+<div class="btn">
+  <a class="btn_inner" href="">
     <span>トップ</span>
-      <svg>
-        <use xlink:href="#arrow">
-      </svg>
+    <svg>
+      <use xlink:href="#arrow">
+    </svg>
   </a>
 </div>
 
