--- a/dev/web/asset/css/hidari-kikino-eren/index.css
+++ b/dev/web/asset/css/hidari-kikino-eren/index.css
@@ -95,6 +95,246 @@ hr {
 input, select {
   vertical-align: middle; }
 
+.btn {
+  position: relative;
+  border: solid .26667vw #fff;
+  background-color: #000;
+  -webkit-transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden; }
+  @media screen and (min-width: 800px) {
+    .btn {
+      border: solid .06944vw #fff; } }
+  .btn:before, .btn:after {
+    position: absolute;
+    content: '';
+    display: block;
+    width: 101%;
+    height: 51%;
+    background-color: #02d0d0;
+    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    z-index: 0; }
+    @media screen and (min-width: 800px) {
+      .btn:before, .btn:after {
+        width: 51%;
+        height: 102%;
+        -webkit-transform: scaleY(0);
+        transform: scaleY(0); } }
+  .btn:before {
+    top: 0;
+    left: 0;
+    -webkit-transform-origin: center left;
+    transform-origin: center left; }
+    @media screen and (min-width: 800px) {
+      .btn:before {
+        -webkit-transform-origin: bottom center;
+        transform-origin: bottom center; } }
+  .btn:after {
+    top: auto;
+    bottom: 0;
+    -webkit-transform-origin: center right;
+    transform-origin: center right; }
+    @media screen and (min-width: 800px) {
+      .btn:after {
+        right: 0;
+        left: auto;
+        -webkit-transform-origin: top center;
+        transform-origin: top center; } }
+  .btn:hover:before, .btn:hover:after {
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1); }
+  .btn_inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    z-index: 2; }
+    .btn_inner > span {
+      position: relative;
+      color: #fff;
+      font-size: 5.06667vw;
+      letter-spacing: .16em;
+      text-indent: .16em;
+      -webkit-transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      -webkit-transform: scaleX(0.85);
+      transform: scaleX(0.85);
+      z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .btn_inner > span {
+          -webkit-writing-mode: vertical-rl;
+          -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
+          text-align: center;
+          letter-spacing: .2em;
+          text-indent: .2em; } }
+      @media screen and (min-width: 800px) and (max-width: 1100px) {
+        .btn_inner > span {
+          font-size: 1.40541vw; } }
+    .btn_inner > svg {
+      position: absolute;
+      top: 0;
+      right: auto;
+      bottom: 0;
+      left: 3.2vw;
+      width: 5.33333vw;
+      height: 3.06667vw;
+      fill: #e50013;
+      margin: auto;
+      display: block;
+      z-index: 2; }
+      @media screen and (min-width: 800px) {
+        .btn_inner > svg {
+          left: .69444vw;
+          width: 1.38889vw;
+          height: .79861vw; } }
+      .btn_inner > svg:hover {
+        fill: #e50013;
+        -webkit-transition-duration: .1s;
+        transition-duration: .1s; }
+  .btn_inner:hover > span {
+    color: #e50013;
+    -webkit-transition-duration: .1s;
+    transition-duration: .1s; }
+  @media screen and (min-width: 800px) {
+    .btn:hover:before, .btn:hover:after {
+      -webkit-transform: scaleY(1);
+      transform: scaleY(1); } }
+
+.btn.mod-vote {
+  background-color: #02d0d0; }
+  .btn.mod-vote span {
+    color: #e50013; }
+  .btn.mod-vote:before, .btn.mod-vote:after {
+    background-color: #e50013; }
+  .btn.mod-vote .btn_inner:hover > span {
+    color: #02d0d0; }
+  .btn.mod-vote .btn_inner:hover > svg {
+    fill: #02d0d0; }
+
+.btn.mod-sns .btn_inner:hover > svg {
+  fill: #e50013; }
+
+/*
+以下のDOM構造で使用
+
+<div class="btn">
+  <a class="btn_inner" href="">
+    <span>トップ</span>
+    <svg>
+      <use xlink:href="#arrow">
+    </svg>
+  </a>
+</div>
+
+*/
+.tab {
+  position: absolute;
+  display: block;
+  width: 45.33333vw;
+  height: 100%;
+  background-color: #000;
+  padding: 1.2vw 1.2vw 0;
+  top: 0;
+  z-index: 2;
+  -webkit-transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1), border-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+  transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1), border-color 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+  .tab_inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border: .26667vw #fff;
+    border-style: solid solid none;
+    overflow: hidden; }
+    @media screen and (min-width: 800px) {
+      .tab_inner:before, .tab_inner:after {
+        position: absolute;
+        content: '';
+        display: block;
+        width: 101%;
+        height: 51%;
+        background-color: #02d0d0;
+        -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+        transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+        transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+        transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+        -webkit-transform: scaleX(0);
+        transform: scaleX(0);
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        z-index: 0; }
+      .tab_inner:before {
+        top: 0;
+        left: 0;
+        -webkit-transform-origin: center right;
+        transform-origin: center right; }
+      .tab_inner:after {
+        top: auto;
+        bottom: 0;
+        -webkit-transform-origin: center left;
+        transform-origin: center left; }
+      .tab_inner:hover:before, .tab_inner:hover:after {
+        -webkit-transform: scaleX(1);
+        transform: scaleX(1); } }
+    .tab_inner > span {
+      color: #fff;
+      -webkit-transform: scaleX(0.85);
+      transform: scaleX(0.85);
+      position: relative;
+      z-index: 2;
+      display: block;
+      letter-spacing: .14em;
+      font-weight: 500;
+      font-size: 4.26667vw;
+      white-space: nowrap;
+      line-height: 1;
+      -webkit-transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1); }
+    .tab_inner > svg {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+      fill: #e50013;
+      display: block;
+      -webkit-transition: fill 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: fill 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: fill 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      transition: fill 0.4s cubic-bezier(0.19, 1, 0.22, 1), transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
+      z-index: 2;
+      left: 1.46667vw;
+      width: 3.6vw;
+      height: 2.13333vw; }
+
 .hidarikikinoEren {
   /* ------------------
 		lp-loading 
@@ -689,6 +929,9 @@ input, select {
         right: 4vw; }
     .hidarikikinoEren .lp-story .btn {
       border: none; }
+      .hidarikikinoEren .lp-story .btn_inner {
+        border: .26667vw #fff;
+        border-style: solid solid none; }
       .hidarikikinoEren .lp-story .btn_inner svg {
         left: 1.46667vw;
         width: 3.6vw;
@@ -715,156 +958,3 @@ input, select {
         width: 100%;
         padding-top: 141.40625%;
         background-color: #fff; }
-
-.btn {
-  position: relative;
-  border: solid .26667vw #fff;
-  background-color: #000;
-  -webkit-transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-  transition: background-color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  overflow: hidden; }
-  @media screen and (min-width: 800px) {
-    .btn {
-      border: solid .06944vw #fff; } }
-  .btn:before, .btn:after {
-    position: absolute;
-    content: '';
-    display: block;
-    width: 101%;
-    height: 51%;
-    background-color: #02d0d0;
-    -webkit-transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    transition: transform 0.4s cubic-bezier(0.19, 1, 0.22, 1), -webkit-transform 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-    -webkit-transform: scaleX(0);
-    transform: scaleX(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    z-index: 0; }
-    @media screen and (min-width: 800px) {
-      .btn:before, .btn:after {
-        width: 51%;
-        height: 102%;
-        -webkit-transform: scaleY(0);
-        transform: scaleY(0); } }
-  .btn:before {
-    top: 0;
-    left: 0;
-    -webkit-transform-origin: center left;
-    transform-origin: center left; }
-    @media screen and (min-width: 800px) {
-      .btn:before {
-        -webkit-transform-origin: bottom center;
-        transform-origin: bottom center; } }
-  .btn:after {
-    top: auto;
-    bottom: 0;
-    -webkit-transform-origin: center right;
-    transform-origin: center right; }
-    @media screen and (min-width: 800px) {
-      .btn:after {
-        right: 0;
-        left: auto;
-        -webkit-transform-origin: top center;
-        transform-origin: top center; } }
-  .btn:hover:before, .btn:hover:after {
-    -webkit-transform: scaleX(1);
-    transform: scaleX(1); }
-  .btn_inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    z-index: 2; }
-    .btn_inner > span {
-      position: relative;
-      color: #fff;
-      font-size: 5.06667vw;
-      letter-spacing: .16em;
-      text-indent: .16em;
-      -webkit-transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-      transition: color 0.4s cubic-bezier(0.19, 1, 0.22, 1);
-      -webkit-transform: scaleX(0.85);
-      transform: scaleX(0.85);
-      z-index: 2; }
-      @media screen and (min-width: 800px) {
-        .btn_inner > span {
-          -webkit-writing-mode: vertical-rl;
-          -ms-writing-mode: tb-rl;
-          writing-mode: vertical-rl;
-          text-align: center;
-          letter-spacing: .2em;
-          text-indent: .2em; } }
-      @media screen and (min-width: 800px) and (max-width: 1100px) {
-        .btn_inner > span {
-          font-size: 1.40541vw; } }
-    .btn_inner > svg {
-      position: absolute;
-      top: 0;
-      right: auto;
-      bottom: 0;
-      left: 3.2vw;
-      width: 5.33333vw;
-      height: 3.06667vw;
-      fill: #e50013;
-      margin: auto;
-      display: block;
-      z-index: 2; }
-      @media screen and (min-width: 800px) {
-        .btn_inner > svg {
-          left: .69444vw;
-          width: 1.38889vw;
-          height: .79861vw; } }
-      .btn_inner > svg:hover {
-        fill: #e50013;
-        -webkit-transition-duration: .1s;
-        transition-duration: .1s; }
-  .btn_inner:hover > span {
-    color: #e50013;
-    -webkit-transition-duration: .1s;
-    transition-duration: .1s; }
-  @media screen and (min-width: 800px) {
-    .btn:hover:before, .btn:hover:after {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1); } }
-
-.btn.mod-vote {
-  background-color: #02d0d0; }
-  .btn.mod-vote span {
-    color: #e50013; }
-  .btn.mod-vote:before, .btn.mod-vote:after {
-    background-color: #e50013; }
-  .btn.mod-vote .btn_inner:hover > span {
-    color: #02d0d0; }
-  .btn.mod-vote .btn_inner:hover > svg {
-    fill: #02d0d0; }
-
-.btn.mod-sns .btn_inner:hover > svg {
-  fill: #e50013; }
-
-/*
-以下のDOM構造で使用
-
-<div class="btn">
-  <a class="btn_inner" href="">
-    <span>トップ</span>
-    <svg>
-      <use xlink:href="#arrow">
-    </svg>
-  </a>
-</div>
-
-*/
