--- a/dev/web/src/sass/hidari-kikino-eren/_button.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_button.scss
@@ -160,3 +160,92 @@
 </div>
 
 */
+
+
+.tab {
+  position: absolute;
+  display: block;
+  width: 45.33333vw;
+  height: 100%;
+  background-color: #000;
+  padding: 1.2vw 1.2vw 0;
+  top: 0;
+  z-index: 2;
+  transition: background-color .4s cubic-bezier(.19,1,.22,1),
+              border-color .4s cubic-bezier(.19,1,.22,1);
+
+  &_inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: .26667vw #fff;
+    border-style: solid solid none;
+    overflow: hidden;
+
+    @include mediaQuery {
+      &:before, &:after {
+        position: absolute;
+        content: '';
+        display: block;
+        width: 101%;
+        height: 51%;
+        background-color: #02d0d0;
+        transition: transform .4s cubic-bezier(.19,1,.22,1);
+        transform: scaleX(0);
+        backface-visibility: hidden;
+        z-index: 0;
+      }
+      &:before {
+        top: 0;
+        left: 0;
+        transform-origin: center right;
+      }
+      &:after {
+        top: auto;
+        bottom: 0;
+        transform-origin: center left;
+      }
+      &:hover {
+        &:before, &:after {
+          transform: scaleX(1);
+        }
+      }
+    }
+
+    
+
+    > span {
+      color: #fff;
+      transform: scaleX(.85);
+      position: relative;
+      z-index: 2;
+      display: block;
+      letter-spacing: .14em;
+      font-weight: 500;
+      font-size: 4.26667vw;
+      white-space: nowrap;
+      line-height: 1;
+      transition: color .4s cubic-bezier(.19,1,.22,1);
+    }
+
+    > svg {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      margin-top: auto;
+      margin-bottom: auto;
+      fill: #e50013;
+      display: block;
+      transition: fill .4s cubic-bezier(.19,1,.22,1),
+                  transform .4s cubic-bezier(.19,1,.22,1),
+                  opacity .4s cubic-bezier(.19,1,.22,1);
+      z-index: 2;
+      left: 1.46667vw;
+      width: 3.6vw;
+      height: 2.13333vw;
+    }
+  }
+}
