--- a/dev/web/src/sass/hidari-kikino-eren/_style.scss
+++ b/dev/web/src/sass/hidari-kikino-eren/_style.scss
@@ -598,14 +598,21 @@
       position: relative;
       height: 19.45946vw;
 
-      &:before {
+      &:before, &:after {
         content: "";
+        height: 100%;
         position: absolute;
         background-color: #e50013;
         border-color: #deff00;
         border-width: .8vw;
-        height: 100%;
-        width: 4.26667vw;
+        border-bottom-style: solid;
+        box-sizing: inherit;
+      }
+      &:before {
+        left: 0;
+      }
+      &:after {
+        right: 0;
       }
     }
 
@@ -624,20 +631,36 @@
       &:nth-child(2) {
         right: 4vw;
       }
+      &:after {
+        content: "";
+        width: 100%;
+        position: absolute;
+        left: 0;
+        height: .8vw;
+        background-color: #deff00;
+        bottom: 0;
+      }
     }
-
-    .btn {
-      border: none;
-
-      &_inner {
-        border: .26667vw #fff;
-        border-style: solid solid none;
+    &_tab.add-active {
+      background-color: transparent;
+      border-left-style: solid;
+      border-right-style: solid;
+      border-top-style: solid;
+      border-width: .8vw;
+      border-color: #deff00;
+      padding: 0;
+      pointer-events: none;
+      
+      &:after {
+        opacity: 0;
       }
 
-      &_inner svg {
-        left: 1.46667vw;
-        width: 3.6vw;
-        height: 2.13333vw;
+      .tab_inner {
+        border-color: transparent;
+      }
+
+      .tab_inner span {
+        color: #deff00;
       }
     }
 
@@ -656,21 +679,70 @@
       }
     }
 
-    &_contents {
+    &_wrap {
       position: relative;
     }
 
     &_pages {
       margin: auto;
       padding: 9.33333vw 4vw;
+      opacity: 0;
+      display: none;
 
-      > li:before {
+      li {
+        max-width: 640px;
+        position: relative;
+        margin: 0 auto 5.06667vw;
+      }
+
+      li:before {
         display: block;
         content: "";
         width: 100%;
         padding-top: 141.40625%;
         background-color: #fff;
       }
+
+      img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
     }
+
+    &_pages.add-active {
+      display: block;
+      animation-name: show;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      @keyframes show {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    }
+  }
+  .lp-story.add-prologue {
+    .lp-story_tabs:before {
+      width: 4.26667vw;
+    }
+    .lp-story_tabs:after {
+      width: 50.66667vw;
+    }
+  }
+
+  .lp-story.add-main {
+    .lp-story_tabs:before {
+      width: 50.66667vw;
+    }
+    .lp-story_tabs:after {
+      width: 4vw;
+    } 
   }
 }
